# rp2040_audio_player

./: .embed.toml  .gitignore  Cargo.toml  LICENSE  mp3-player.uf2  pre-script.rhai
.cargo/: config.toml
src/: dac.rs  display.rs  input.rs  main.rs  player.rs  sd.rs  tone.rs
src/format/: mod.rs  mp3.rs  wav.rs
src/ui/: app.rs  menu.rs  mod.rs  nav.rs  pages.rs
