[package]
edition = "2024"
name = "mp3-player"
version = "0.1.0"
authors = ["Riley Smith <riley@rileysmith.me>"]
resolver = "2"

[[bin]]
name = "mp3-player"
test = false
bench = false

[dependencies]
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m-rt = "0.7.3"

embassy-usb-logger = { version = "0.6" }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.10", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
fixed = { version = "1.29", default-features = false }
embedded-sdmmc = { version = "0.9.0", default-features = false, features = ["defmt-log"] }
embedded-hal-bus = "0.3"
ssd1306 = "0.10.0"
embedded-graphics = "0.8.2"
heapless = "0.9.3"
log = "0.4"
static_cell = "1"
nanomp3 = "0.1.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
